cluster/apps/cloudflare-tunnel/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflare-tunnel
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
